feat(firebase): Working Firebase connection, alongside functional Android Dev Build

--- a/app.json
+++ b/app.json
@@ -13,9 +13,13 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "googleServicesFile": "GoogleService-Info.plist",
+      "supportsTablet": true,
+      "bundleIdentifier": "com.garynation.mobdeve"
     },
     "android": {
+      "googleServicesFile": "./google-services.json",
+      "package": "com.garynation.mobdeve",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -25,7 +29,13 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router"
-    ]
+      "expo-router",
+      "@react-native-firebase/app"
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "a66f38cd-4ef0-43e4-bc0b-0cd672cd1e5c"
+      }
+    }
   }
 }
