--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "expo-dev-client": "^4.0.28",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
+    "expo-location": "^17.0.1",
     "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-maps": "^1.18.0",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
