--- a/app.json
+++ b/app.json
@@ -19,7 +19,16 @@
     },
     "android": {
       "googleServicesFile": "./google-services.json",
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyB3jtYPw8gLCtOuoFkZdCuxhdFhm2GdFB0"
+        }
+      },
       "package": "com.garynation.mobdeve",
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ],
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/bike-logo.png",
         "backgroundColor": "#ffffff"
@@ -32,9 +41,12 @@
       "expo-router",
       "@react-native-firebase/app",
       "expo-location",
-      {
-        "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
-      }
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+        }
+      ]
     ],
     "extra": {
       "eas": {
