--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-native-firebase/auth": "^21.0.0",
     "@react-native-firebase/firestore": "^21.0.0",
     "@react-native-firebase/storage": "^21.0.0",
-    "expo": "~51.0.28",
+    "expo": "~51.0.38",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "^4.0.28",
     "expo-image-picker": "~15.0.7",
@@ -25,7 +25,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-maps": "^1.18.0",
+    "react-native-maps": "1.14.0",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
