--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-location": "^17.0.1",
     "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "^3.0.7",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
