injected googleServicesFile as an EAS Secret for security and Expo Preview Building

--- a/eas.json
+++ b/eas.json
@@ -8,19 +8,31 @@
       "developmentClient": true,
       "distribution": "internal",
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+        "env": {
+          "GOOGLE_SERVICES_JSON": "@GOOGLE_SERVICES_JSON",
+          "GOOGLE_MAPS_API_KEY": "@GOOGLE_MAPS_API_KEY"
+        }
       }
     },
     "preview": {
       "distribution": "internal",
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+        "env": {
+          "GOOGLE_SERVICES_JSON": "@GOOGLE_SERVICES_JSON",
+          "GOOGLE_MAPS_API_KEY": "@GOOGLE_MAPS_API_KEY"
+        }
       }
     },
     "production": {
       "autoIncrement": true,
       "android": {
-        "buildType": "app-bundle"
+        "buildType": "app-bundle",
+        "env": {
+          "GOOGLE_SERVICES_JSON": "@GOOGLE_SERVICES_JSON",
+          "GOOGLE_MAPS_API_KEY": "@GOOGLE_MAPS_API_KEY"
+        }
       }
     }
   },
