--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.3",
     "@pchmn/expo-material3-theme": "^1.3.2",
     "@react-native-firebase/app": "^21.0.0",
     "@react-native-firebase/auth": "^21.0.0",
@@ -18,6 +19,7 @@
     "expo": "~51.0.38",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "^4.0.28",
+    "expo-font": "~12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-location": "^17.0.1",
@@ -32,7 +34,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "save-dev": "^0.0.1-security",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "expo-splash-screen": "~0.27.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
